# QObjectSingleton

./: README.adoc
SingletonValues/: CMakeLists.txt
SingletonValues/main/: CMakeLists.txt
SingletonValues/main/qml/: Main.qml
SingletonValues/main/src/: main.cpp
SingletonValues/singleton/: CMakeLists.txt
SingletonValues/singleton/inc/: singletonclass.hpp
SingletonValues/singleton/src/: singletonclass.cpp
